Almost working everything

--- a/src/pixel_warriors/htmlhelp/rules.html
+++ b/src/pixel_warriors/htmlhelp/rules.html
@@ -16,34 +16,24 @@
         </p>
         <h3> Działanie gry </h3>
         <h4> Strona startowa</h4>
-        <a href="images/rules/main.PNG" class="fancybox">
-            <img src="images/rules/main.PNG">
-        </a>
+            <img src="rules/main.PNG">
         <p> Po zalogowaniu się jesteśmy na stronie głównej gry. Stąd możemy przejść do każdej zakładki.</p>
         <h4> Statystyki </h4>
-        <a href="images/rules/statytic.PNG" class="fancybox">
-            <img src="images/rules/statytic.PNG">
-        </a>
+            <img src="rules/statystics.PNG">
         <p> W tej zakładce możemy sprawdzić wszystkie statystyki swojej postaci. Można sprawdzić jakie
             przedmioty mamy założe oraz ich atrybuty.</p>
         <h4> Ekwipunek </h4>
-        <a href="images/rules/backpack.PNG" class="fancybox">
-            <img src="images/rules/backpack.PNG">
-        </a>
+            <img src="rules/backpack.PNG">
         <p> Tutaj znajduje się plecak, do którego trafiają przedmioty zdobyte w czasie walk. Klikając na dany
             przedmiot lewym przyciskiem myszy możemy go założyć na swoją postać lub go zdjąć, natomiast klikając
             prawym przyciskiem możemy sprawdzić statystyki danego przemiotu </p>
         <h4> Tawerna </h4>
-        <a href="images/rules/inn.PNG" class="fancybox">
-            <img src="images/rules/inn.PNG">
-        </a>
+            <img src="rules/inn.PNG">
         <p> W tawernie wykonujemy misje, które zleca nam Karmiarz. Aby dostać zadanie należy kliknąć na
             karczmiarza
             po czym dostaniemy do wyboru kilka misji, z pośród których wybieramy jedną. </p>
         <h4> Ranking </h4>
-        <a href="images/rules/ranking.PNG" class="fancybox">
-            <img src="images/rules/ranking.PNG">
-        </a>
+            <img src="rules/ranking.PNG">
         <p> W tej zakładce możemy sprawdzić które miejsce zajmujemy w ogólnym rankigu gry. Można odnaleźć innych
             graczy
             po "nazwie gracz" lub numerze rankingu. Klikając na gracza wyświetlą nam się jego statystki oraz
